--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<h1>Justin General</h1>
-
-<a href="http://justingeneral.bandcamp.com">http://justingeneral.bandcamp.com</a>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <style>
+      body{
+        font-size: 60px;
+        text-align: center;
+        font-family: 'Roboto Condensed', sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Justin General</h1>
+    <a href="http://justingeneral.bandcamp.com">http://justingeneral.bandcamp.com</a>
+  </body>
+</html>
