--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Justin General</title>
     <meta name="description" content="Justin General - musician based in Glasgow">
@@ -13,7 +13,7 @@
     
     <style>
       body{
-        font-size: 60px;
+        font-size: 20px;
         text-align: center;
         font-family: 'Roboto Condensed', sans-serif;
       }
